# ClaudeUsageMonitor

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
packaging/linux/: ClaudeUsageMonitor.desktop
src/: AccessoryWindow.cpp  AccessoryWindow.h  CredentialProvider.cpp  CredentialProvider.h  UsageClient.cpp  UsageClient.h  UsageModel.h  main.cpp
